[package]
name = "julia-set-renderer"
version = "0.1.0"
edition = "2021"
default-run = "julia-set-renderer-gui"

[[bin]]
name = "julia-set-renderer-gui"
path = "bin/gui.rs"

[[bin]]
name = "julia-set-renderer-cli"
path = "bin/cli.rs"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
color-rs = "0.7.1"
colorgrad = "0.6.0"
image = "0.24.2"
klask = { git = "https://github.com/MichalGniadek/klask" }
opener = "0.5.0"
rayon = "1.5.3"
